# anim_e

./: README.md  app.ipynb  setup.cfg
notebooks/: generate-readme-images.ipynb
src/anim_e/: colab.py
