[metadata]
name = anim_e
author = Jonathan Chang
author_email = 31893406+cccntu@users.noreply.github.com
description = Anim·E, Anime Enhanced dalle mini
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    dalle-mini
    min_dalle
    vqgan-jax @ git+https://github.com/patil-suraj/vqgan-jax.git@main

[options.packages.find]
where = src
